change GC style from CMS to G1